istion/auth/requestAuthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: jwt-request-auth
  namespace: local
spec:
  selector:
    matchLabels:
      app: api # app name
  jwtRules:
    - issuer: "http://localhost:8180/realms/quickstart" # auth server issuer from decode jwt "iss"
      jwks: >- # get this value from >>> curl http://localhost:8180/realms/quickstart/protocol/openid-connect/certs
        {"keys":[{"kid":"EJRhANU1aWQjHPyoGC_bhS8A_Ne0kMVcMhs5Iyy7tdY","kty":"RSA","alg":"RS256","use":"sig","n":"qFz4CJJJxQocHhJ_iSwN-aPR0uuE4LW5DwpAAf0BQvO8Kobn3_vBSvpZhsOAcR2AD4IjMTK0PnRaO2u55p8mXBPcFfuN7TSpJilTh3qc4e49J_p_oZ_A7BanEjwz0sef5jDcttLxm_6ygC_aF6CBxYNpcTuK44GzMdgSYjxoA5NVAE1SmZuu-bViY-WKVjZ-2n56ZeGT6rdJvajaCfyP3WuUqRsdRSS6SIvDPANHvfE3CTQ2iouuXZTnX1pi-pkYBrZGNx9QziRuLeppvntbKQ_1l2Q1Wx8zSKqdaL9I3QuwJvJy1WEbJko7sBF_0ezDw3WCQYyzyAYm2JOXRR37ww","e":"AQAB","x5c":["MIICozCCAYsCBgGQksqP4DAN [...]
