istion/auth/authorizationPolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: require-jwt
  namespace: local
spec:
  selector:
    matchLabels:
      app: api # app name
  action: ALLOW
  rules:
    - from:
        - source:
            requestPrincipals: ["*"]
